--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <link rel="stylesheet" href="/css/style.css"> -->
     <link rel="stylesheet" href="./css/index.css">
     <!-- <link rel="shortcut icon" href="./assets/Booki_3x.ico" type="image/x-icon"> -->
-    <!-- <script src="https://kit.fontawesome.com/2c838510a5.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/2c838510a5.js" crossorigin="anonymous"></script>
     <title>Booki</title>
 </head>
 
