--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- <link rel="stylesheet" href="./css/index.css"> -->
     <!-- <link rel="shortcut icon" href="./assets/Booki_3x.ico" type="image/x-icon"> -->
     <script src="https://kit.fontawesome.com/2c838510a5.js" crossorigin="anonymous"></script>
     <title>Booki</title>
@@ -69,7 +69,6 @@
                 <span class="title">Plus de 500 logements sont disponibles dans cette ville</span>
             </i>
         </div>
-
         <section class="accommodation">
             <article class="card-accommodation">
                 <h1>Hébergements à Marseille</h1>
@@ -88,7 +87,6 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                     <i class="fa fa-star" aria-hidden="true"></i>
-
                                 </div>
                             </div>
                         </a>
@@ -258,7 +256,6 @@
                 </ul>
             </article>
         </section>
-            
         <section class="activity">
             <h1 class="activity-title">
                 Activités à Marseille
@@ -294,24 +291,24 @@
                 </ul>
             </div>
         </section>
-        </main>
-        <footer>
-            <ul>
+    </main>
+    <footer>
+        <ul>
                 <li class="title">À propos</li>
                 <li><a href="#">Fonctionnement du site</a></li>
                 <li><a href="#">Conditions générales </a></li>
                 <li><a href="#">Données et confidentialité</a></li>
-            </ul>
-            <ul>
+        </ul>
+        <ul>
                 <li class="title">Nos hébergements</li>
                 <li><a href="#">Charte qualité</a></li>
                 <li><a href="#">Proposer votre hôtel</a></li>
-            </ul>
-            <ul>
+        </ul>
+        <ul>
                 <li class="title">Assistance</li>
                 <li><a href="#">Centre d’aide</a></li>
                 <li><a href="#">Nous contacter</a></li>
-            </ul >
-        </footer>
+        </ul >
+    </footer>
 </body>
 </html>
